Fix z-index for header

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -6,7 +6,7 @@
   left: 0;
   top: 0;
   right: 0;
-  z-index: 1;
+  z-index: 2;
   &.header-scrolled,
   &.mobile-menu-visible {
     box-shadow: -21.213px 21.213px 30px 0px rgba(158, 158, 158, 0.3);
